--- a/templates/chirp_detail.html
+++ b/templates/chirp_detail.html
@@ -29,4 +29,7 @@
         <input type="submit" value="Submit">
     </form>
 </div>
+<div>
+    <a href="{% url 'dashboard' %}">Back to Dashboard</a>
+</div>
 {% endblock content %}
