--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,17 @@
         <title>Chirper</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
         <link href="{% static 'css/base.css' %}" rel="stylesheet">
+        {% block extracss %}{% endblock %}
     </head>
-    <body>  
+    <body class="{% block bodyclass %}{{ body_class }}{% endblock %}">  
         <header>
-            <h1><a href="{% url 'home' %}">Chirper</a></h1>
+            <h1>{% if user.is_authenticated %}<a href="{% url 'dashboard' %}">{% endif %}Chirper</a></h1>
+            <div class="logout-link">
+                <a href="{% url 'logout' %}">Logout</a>
+            </div>
         </header>
         <div>
-            {% block content %}
-            {% endblock content %}
+            {% block content %} {% endblock content %} 
         </div>
     </body>
 </html>
